fixing layout issues

--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -187,13 +187,6 @@
     justify-content: center;
 }
 
-    .text-zone {
-        position: relative;
-        height: 30%;
-        flex-basis: 30%;
-        text-align: center;
-    }
-
     h1 {
         font-size: 4vw; /* Updated from 35px to 64px */
         font-family: 'Coolvetica'; /* No change */
